--- a/tools/add-schedule/schedule.org
+++ b/tools/add-schedule/schedule.org
@@ -4,7 +4,7 @@
 
 ** Birdz 
 
-*** Building Bird Quiz with a Tinder like interface using Flutter
+*** HOLD Building Bird Quiz with a Tinder like interface using Flutter
 SCHEDULED: <2020-05-09 Sat 19:30-21:00>
 
 
@@ -23,3 +23,6 @@ SCHEDULED: <2020-05-10 Sun 16:00-17:45>
 SCHEDULED: <2020-05-10 Sun 19:00-20:00>
 
 * Twitch Hacks
+
+*** Generating Schedule HTML Page from Org Mode
+SCHEDULED: <2020-05-09 Sat 19:30-21:00>
