schedule: regenerated html schedule

--- a/tools/add-schedule/schedule.org
+++ b/tools/add-schedule/schedule.org
@@ -20,9 +20,11 @@ SCHEDULED: <2020-05-11 Tue 18:30-20:00>
 SCHEDULED: <2020-05-10 Sun 16:00-17:45>
 
 *** Building a Multiplayer 2D Game in Flutter
-SCHEDULED: <2020-05-10 Sun 19:00-20:00>
+SCHEDULED: <2020-05-10 Sun 18:30-19:45>
 
 * Twitch Hacks
 
 *** Generating Schedule HTML Page from Org Mode
-SCHEDULED: <2020-05-09 Sat 19:30-21:00>
+SCHEDULED: <2020-05-12 Tue 18:30-20:00>
+
+- [ ] Strike through items that are on hold or point it out very obviously in another way
