--- a/tools/add-schedule/schedule.org
+++ b/tools/add-schedule/schedule.org
@@ -17,7 +17,7 @@ SCHEDULED: <2020-05-11 Tue 18:30-20:15>
 *** Building Bird Quiz with a Tinder like interface using Flutter
 SCHEDULED: <2020-05-15 Fri 18:30-20:15>
 
-*** Building Bird Quiz with a Tinder like interface using Flutter
+*** HOLD Building Bird Quiz with a Tinder like interface using Flutter
 SCHEDULED: <2020-05-16 Sat 18:30-20:15>
 
 ** Multiplayer Game
