--- a/tools/add-schedule/schedule.org
+++ b/tools/add-schedule/schedule.org
@@ -31,7 +31,7 @@ SCHEDULED: <2020-05-14 Fri 18:30-20:15>
 *** Building a Multiplayer 2D Game in Flutter
 SCHEDULED: <2020-05-10 Sun 15:00-16:45>
 
-*** Building a Multiplayer 2D Game in Flutter
+*** HOLD Building a Multiplayer 2D Game in Flutter
 SCHEDULED: <2020-05-10 Sun 18:30-20:45>
 
 * Twitch Hacks
