schedule: regenerated html schedule

--- a/tools/add-schedule/schedule.org
+++ b/tools/add-schedule/schedule.org
@@ -31,15 +31,15 @@ SCHEDULED: <2020-05-14 Fri 18:30-20:15>
 *** HOLD Building a Multiplayer 2D Game in Flutter
 SCHEDULED: <2020-05-10 Sun 18:30-20:45>
 
-* Twitch Hacks
+* Emacs / Elisp / Twitch Hacks
 
-*** Setting Twitch Status from Emacs Org Mode
+*** Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp  
 SCHEDULED: <2020-05-12 Sat 18:30-20:15>
 
-- [ ] Strike through items that are on hold or point it out very obviously in another way
-
-*** Setting Twitch Status from Emacs Org Mode
+*** Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp  
 SCHEDULED: <2020-05-17 Sun 16:00-18:45>
 
 *** Setting Twitch Status from Emacs Org Mode
 SCHEDULED: <2020-05-12 Sun 18:30-20:15>
+
+- [ ] Strike through items that are on hold or point it out very obviously in another way
