schedule: regenerated html schedule

--- a/tools/add-schedule/schedule.org
+++ b/tools/add-schedule/schedule.org
@@ -4,18 +4,11 @@
 
 ** Birdz 
 
-*** HOLD Building Bird Quiz with a Tinder like interface using Flutter
-SCHEDULED: <2020-05-09 Sat 19:30-21:00>
-
-
 *** Building Bird Quiz with a Tinder like interface using Flutter
 SCHEDULED: <2020-05-11 Mon 18:30-20:00>
 
 *** Building Bird Quiz with a Tinder like interface using Flutter
 SCHEDULED: <2020-05-11 Tue 18:30-20:15>
-
-*** HOLD Building Bird Quiz with a Tinder like interface using Flutter
-SCHEDULED: <2020-05-16 Sat 18:30-20:15>
 
 ** Multiplayer Game
 
@@ -28,18 +21,16 @@ SCHEDULED: <2020-05-14 Thu 18:30-20:15>
 *** Building a Multiplayer 2D Game in Flutter
 SCHEDULED: <2020-05-14 Fri 18:30-20:15>
 
-*** HOLD Building a Multiplayer 2D Game in Flutter
-SCHEDULED: <2020-05-10 Sun 18:30-20:45>
-
 * Emacs / Elisp / Twitch Hacks
 
 *** Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp  
-SCHEDULED: <2020-05-12 Sat 18:30-20:15>
+SCHEDULED: <2020-05-23 Sat 18:30-20:15>
 
 *** Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp  
-SCHEDULED: <2020-05-17 Sun 16:00-18:45>
+SCHEDULED: <2020-05-24 Sun 14:00-17:45>
 
-*** Setting Twitch Status from Emacs Org Mode
+*** Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp  
+SCHEDULED: <2020-05-24 Sun 18:30-20:15>
+
+*** HOLD Setting Twitch Status from Emacs Org Mode
 SCHEDULED: <2020-05-12 Sun 18:30-20:15>
-
-- [ ] Strike through items that are on hold or point it out very obviously in another way
