--- a/tools/add-schedule/schedule.org
+++ b/tools/add-schedule/schedule.org
@@ -38,5 +38,8 @@ SCHEDULED: <2020-05-24 Sun 14:00-17:45>
 *** Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp
 SCHEDULED: <2020-05-24 Sun 18:30-20:15>
 
+*** Scrolling PDF Preview to Specific Page from within Emacs
+SCHEDULED: <2020-06-01 Mon 16:00-17:45>
+
 *** HOLD Setting Twitch Status from Emacs Org Mode
 SCHEDULED: <2020-05-12 Sun 18:30-20:15>
