--- a/tools/add-schedule/schedule.org
+++ b/tools/add-schedule/schedule.org
@@ -35,7 +35,7 @@ SCHEDULED: <2020-05-23 Sat 18:30-20:15>
 *** HOLD Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp
 SCHEDULED: <2020-05-24 Sun 14:00-17:45>
 
-*** Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp
+*** HOLD Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp
 SCHEDULED: <2020-05-24 Sun 18:30-20:15>
 
 *** HOLD Setting Twitch Status from Emacs Org Mode
