--- a/tools/add-schedule/schedule.org
+++ b/tools/add-schedule/schedule.org
@@ -17,7 +17,7 @@ SCHEDULED: <2020-05-12 Sat 18:30-20:15>
 
 * Emacs / Elisp / Twitch Hacks
 
-*** Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp
+*** HOLD Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp
 SCHEDULED: <2020-05-23 Sat 18:30-20:15>
 
 *** HOLD Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp
