--- a/tools/add-schedule/schedule.org
+++ b/tools/add-schedule/schedule.org
@@ -13,7 +13,10 @@ SCHEDULED: <2020-05-11 Tue 18:30-20:15>
 ** Multiplayer Game
 
 *** Building a Multiplayer 2D Game in Flutter
-SCHEDULED: <2020-05-12 Sat 18:30-20:15>
+SCHEDULED: <2020-05-12 Thur 18:30-20:30>
+
+*** Building a Multiplayer 2D Game in Flutter
+SCHEDULED: <2020-05-12 Sat 18:30-20:30>
 
 * Emacs / Elisp / Twitch Hacks
 
